--- a/flask-angular-boilerplate/frontend/index.html
+++ b/flask-angular-boilerplate/frontend/index.html
@@ -20,10 +20,14 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+          <a class="navbar-brand hover text-white" ng-click="previewCar(car.carId)">Cars</a>
         </nav>
       </header>
     
       <main role="main" class="container" ng-view></main>
+
+
+    
 </body>
 
 <script type="text/javascript" src="app.js"></script>
