--- a/flask-angular-boilerplate/frontend/index.html
+++ b/flask-angular-boilerplate/frontend/index.html
@@ -26,6 +26,8 @@
           </div>  
           <div class="topnav-right" ng-if="isUserLoggedIn == true">
             <a class="navbar-brand hover text-dark fixed-left"  ng-click="car()" style="border: solid #FF9671 3px;border-radius:10%;">Cars</a>
+            <a class="navbar-brand hover text-dark fixed-left"  ng-click="logout()" style="border: solid #FF9671 3px;border-radius:10%;">Logout</a>
+
           </div>      
         </nav>
       </header>
